--- a/components/UserInfoForm/UserInfoForm.module.css
+++ b/components/UserInfoForm/UserInfoForm.module.css
@@ -57,9 +57,12 @@
 }
 
 .label {
-  font-size: 14px;
+  font-family: var(--font-inter);
+  font-size: 16px;
   font-weight: 400;
+  line-height: 150%;
   color: var(--color-neutral-darkest);
+
 }
 
 .input {
