--- a/app/@modal/(.)basket/BasketModal.module.css
+++ b/app/@modal/(.)basket/BasketModal.module.css
@@ -17,6 +17,7 @@
   max-width: 552px;
   width: 100%;
   height: 100%;
+  max-width: 375px;
   overflow-y: auto;
   padding: 40px 20px;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
@@ -114,6 +115,7 @@
 @media screen and (min-width: 768px) {
   .modal {
     padding: 40px 32px;
+    min-width: 610px;
   }
 
   .actions {
@@ -130,7 +132,6 @@
 @media screen and (min-width: 1440px) {
   .modal {
     padding: 40px 64px 0 32px;
-    width: 589px;
   }
 
   .primaryButton,
