Fixed form error styles, order page-payment page logic of requests to backend and added saving form draft into form in order page. Added size info in order list element

--- a/components/UserInfoForm/UserInfoForm.module.css
+++ b/components/UserInfoForm/UserInfoForm.module.css
@@ -85,6 +85,10 @@
   border-color: var(--color-deco-dark);
 }
 
+
+.error {
+  color: var(--color-red);
+}
 /* @media (max-width: 767px) {
   /* .formWrapper {
     grid-template-columns: 1fr;
