--- a/components/BasketModal/BasketModal.module.css
+++ b/components/BasketModal/BasketModal.module.css
@@ -10,6 +10,18 @@
   animation-timing-function: ease;
 }
 
+.visibleBackdrop {
+  opacity: 1;
+  pointer-events: auto;
+  transition: opacity 0.3s ease;
+}
+
+.hiddenBackdrop {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
 .fadeIn {
   animation-name: backdropFadeIn;
 }
