--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -48,21 +48,18 @@
 
 .favorites {
   margin-left: auto;
-  border: 1px solid var(--opacity-transparent);
-  background: var(--opacity-neutral-darkest-5);
-  border-radius: 100px;
-  width: 32px;
-  height: 32px;
+  border: none;
+  background: none;
   display: flex;
   justify-content: center;
   align-items: center;
+  scale: 1;
   transition: all 250ms ease-in-out;
 }
 
 .favorites:hover,
 .favorites:focus {
-  border: 1px solid var(--opacity-neutral-darkest-50);
-  background: var(--opacity-neutral-darkest-15);
+  scale: 1.3;
 }
 
 .detail {
