--- a/components/ThemeToggle/ThemeToggle.module.css
+++ b/components/ThemeToggle/ThemeToggle.module.css
@@ -1,7 +1,44 @@
+#checkbox-input {
+    display: none;
+}
+
+.switch {
+    width: fit-content;
+    padding: 5px;
+    background-color: rgb(46, 46, 46);
+    border-radius: 50px;
+    z-index: 1;
+    cursor: pointer;
+    display: flex;
+    transition: all 0.7s;
+}
+
+
+
+:global(#checkbox-input:checked)+.switch {
+    background-color: rgb(236, 225, 13);
+    box-shadow:
+            0 0 50px rgb(255, 255, 180),
+            0 0 150px rgb(255, 255, 120),
+}
+
+:global(#checkbox-input) {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+
+  
+    .switch:hover {
+        scale: 1.3;
+    }
+}
+
+
 /* From Uiverse.io by OfficialRedx09 */
 /* The switch - the box around the slider */
 
-.button {
+/* .button {
     background: none;
     border: none;
 }
@@ -11,17 +48,17 @@
     display: inline-block;
     width: 3.5em;
     height: 2em;
-}
+} */
 
 /* Hide default HTML checkbox */
-.switch input {
+/* .switch input {
     opacity: 0;
     width: 0;
     height: 0;
-}
+} */
 
 /* The slider */
-.slider {
+/* .slider {
     position: absolute;
     cursor: pointer;
     inset: 0;
@@ -49,4 +86,4 @@
 
 .switch input:checked+.slider:before {
     transform: translateX(1.5em);
-}
+} */
