--- a/components/PopularCategories/PopularCategories.module.css
+++ b/components/PopularCategories/PopularCategories.module.css
@@ -31,6 +31,7 @@
     line-height: 150%;
     color: var(--color-neutral-darkest);
     transition: all 250ms ease-in-out;
+    white-space: nowrap;
 }
 
 .button:hover,
