--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -1,7 +1,7 @@
 .image {
   border-radius: 16px;
-  width: 335px;
-  height: 335px;
+  max-width: 335px;
+  max-height: 335px;
   margin-bottom: 16px;
 }
 
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 8px;
+  height: 50px;
 }
 
 .name {
@@ -66,7 +67,7 @@
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 100px;
   padding: 4px 10px;
-  width: 335px;
+  max-width: 335px;
   height: 40px;
   background: rgba(0, 0, 0, 0.05);
   transition: background 250ms ease-in-out;
@@ -152,8 +153,8 @@
 
   .image {
     border-radius: 16px;
-    width: 336px;
-    height: 336px;
+    max-width: 336px;
+    max-height: 336px;
   }
 
   .buttonControls {
@@ -181,8 +182,8 @@
 @media screen and (min-width: 1440px) {
   .image {
     border-radius: 16px;
-    width: 304px;
-    height: 304px;
+    max-width: 304px;
+    max-height: 304px;
   }
 
   .name {
