--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -174,6 +174,11 @@
     height: auto;
   }
 
+  .detail {
+    width: 100%;
+    max-width: none;
+  }
+
   .buttonControls {
     position: absolute;
     top: 30%;
