--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -75,6 +75,7 @@
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 100px;
   padding: 4px 10px;
+  width: 100%;
   max-width: 335px;
   height: 40px;
   background: rgba(0, 0, 0, 0.05);
