--- a/components/GoodsList/GoodsList.module.css
+++ b/components/GoodsList/GoodsList.module.css
@@ -75,7 +75,8 @@
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 100px;
   padding: 4px 10px;
-  max-width: 335px;
+  /* max-width: 335px; */
+  width: 100%;
   height: 40px;
   background: rgba(0, 0, 0, 0.05);
   transition: background 250ms ease-in-out;
@@ -174,10 +175,10 @@
     height: auto;
   }
 
-  .detail {
+  /* .detail {
     width: 100%;
     max-width: none;
-  }
+  } */
 
   .buttonControls {
     position: absolute;
