--- a/components/UserInfoForm/UserInfoForm.module.css
+++ b/components/UserInfoForm/UserInfoForm.module.css
@@ -15,6 +15,22 @@
   width: 100%; /* Mobile-first: повна ширина */
 }
 
+.selectWrapper {
+  position: relative;
+  width: 304px;
+}
+
+.icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  width: 18px;
+  height: 18px;
+  color: var(--color-neutral-darkest);
+}
+
 @media (min-width: 768px) {
   .formWrapper {
     flex-direction: row; /* Рядок на великих екранах */
@@ -56,6 +72,7 @@
   outline: none;
   color: var(--color-neutral-darkest);
   transition: border-color 0.25s ease;
+  width: 100%;
 }
 
 .input::placeholder {
