--- a/components/OrderItem/OrderItem.module.css
+++ b/components/OrderItem/OrderItem.module.css
@@ -10,9 +10,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
+    width: 120px;
     gap: 4px;
 }
+
 
 .col:nth-child(3) {
     display: none;
